2007-06-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (decorateType): optimized '?' for equal operands
	* src/SDCCicode.c (geniCodeConditional): optimization for bit result
	  with literal operands

2007-06-10 Borut Razem <borut.razem AT siol.net>

	* as/link/z80/lklibr.c: fixed mingw build warning
	  lklibr.c:575: warning: implicit declaration of function 'tolower'
	* src/SDCCmain.c, src/ds390/main.c, src/mcs51/main.c, src/pic/main.c,
	  src/z80/main.c: move target specific options from src/SDCCmain.c
	  to src/<target>/main.c

2007-06-09 Borut Razem <borut.razem AT siol.net>

	* src/z80/gen.c: fixed bug #1294691: nested ifs make compiler crash;
	  removed unused swap_sense; removed outBitCLong, replaced with outBitC
	* support/regression/tests/bug-1294691.c: added

2007-06-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmem.c (allocDefault): removed check sym->level==0 for SPEC_ABSA,
	  can also be static, fixes bug 1733438
	* src/SDCCsymt.c (checkSClass): static local vars in reentrant funcs can
	  have absolute address too
	  (computeType): added optimization for 'cond ? true : false'
	* support/regression/tests/absolute.c: added test for static absolute var

2007-06-08 Raphael Neider <rneider AT web.de>

	* src/regression/Makefile: suppress parallel builds, allow easy
	  switching between pic14/pic16 ports
	* src/regression/picregs.h: added pic14/16 header file switch
	* src/regression/{compare7.c,compare8.c,compare9.c,compare10.c,
	  inline.c,nestfor.c,string1.c}: include "picregs.h"

2007-06-07 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/*.[ch], sim/ucsim/configure, sim/ucsim/configure.in:
	  permanent solution to suppress GCC 4.2.0 c++ warning:
	  deprecated conversion from string constant to `char *'
	  use 'const char *' where ever required
	* support/regression/generate-cases.py: implemented more flexible rule
	  for detection of testing functions, allowing white-spaces surrounding